--- a/requirements.txt
+++ b/requirements.txt
@@ -1,46 +1,50 @@
+alembic==1.4.2
+aniso8601==8.0.0
 appdirs==1.4.4
-asn1crypto==0.24.0
-bcrypt==3.1.7
+bcrypt==3.2.0
 certifi==2020.6.20
 cffi==1.14.2
 chardet==3.0.4
-click==6.7
-configparser==4.0.2
-contextlib2==0.6.0.post1
-cryptography==2.1.4
+click==7.1.2
 distlib==0.3.1
-Django==1.11.29
-djangorestframework==3.9.4
-enum34==1.1.10
 filelock==3.0.12
-Flask==1.1.2
+Flask==0.12.2
 Flask-Bcrypt==0.7.1
-gunicorn==19.10.0
-idna==2.7
+Flask-JWT-Extended==3.24.1
+flask-marshmallow==0.8.0
+Flask-Migrate==2.1.1
+Flask-RESTful==0.3.6
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.3.2
+Flask-Testing==0.8.0
+gunicorn==20.0.4
+idna==2.10
 importlib-metadata==1.7.0
 importlib-resources==3.0.0
-ipaddress==1.0.17
-itsdangerous==0.24
+itsdangerous==1.1.0
 Jinja2==2.11.2
-keyring==10.6.0
-keyrings.alt==3.0
-MarkupSafe==0.23
-pathlib2==2.3.5
-pipenv==2020.6.2
-plaid-python==5.0.0
+Mako==1.1.3
+MarkupSafe==1.1.1
+marshmallow==2.14.0
+marshmallow-sqlalchemy==0.13.2
+packaging==20.4
+passlib==1.7.2
+pluggy==0.13.1
+psycopg2==2.7.5
+psycopg2-binary==2.8.6
+py==1.9.0
 pycparser==2.20
-pycrypto==2.6.1
-pygobject==3.26.1
+PyJWT==1.7.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-editor==1.0.4
 pytz==2020.1
-pyxdg==0.25
-requests==2.20.0
-scandir==1.10.0
-SecretStorage==2.3.1
-singledispatch==3.4.0.3
+requests==2.24.0
 six==1.15.0
-typing==3.7.4.3
-urllib3==1.24.3
-virtualenv==20.0.28
-virtualenv-clone==0.5.4
+SQLAlchemy==1.3.19
+toml==0.10.1
+tox==3.20.0
+urllib3==1.25.10
+virtualenv==20.0.31
 Werkzeug==1.0.1
-zipp==1.2.0
+zipp==3.1.0
